--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
     
     <%#= javascript_include_tag "application" %>
     <%#= javascript_include_tag "https://maps.googleapis.com/maps/api/js" %>
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDjnH5dFfeda0-J7TSCkFwc3e5iEm1pvJ4" %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBVr4MM_FsK25Hgj29MgRrqjn3xn4zyfi8" %>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVr4MM_FsK25Hgj29MgRrqjn3xn4zyfi8&libraries=places&callback=initAutocomplete"
+        async defer></script> -->
     <%= javascript_pack_tag 'application' %>
   </body>
 </html>
